# mojodiffusion

./: .gitignore  AGENTS.md  AUDIT_FLAMECORE_GAPS_2026-05-30.md  AUDIT_FLAMECORE_PARITY_2026-06-01.md  AUDIT_FUSION_INVENTORY_2026-05-30.md  AUDIT_FUSION_SPEEDUP_PLAN_2026-05-30.md  AUDIT_INFERENCE_AND_CROSSPOLLINATION_2026-05-30.md  AUDIT_PLAN_DRIFT_2026-05-30.md  AUDIT_TRAINING_READINESS_2026-05-30.md  BEAT_FLAME_SCOREBOARD_2026-06-10.md  BUGFIX_DATA_PATH_2026-05-30.md  BUGFIX_HARNESS_2026-05-30.md  BUGFIX_KLEIN_TXT_ROPE_PENDING_2026-05-31.md  BUG_sdpa_backward_H30_dq_dk_zero.md  BUILD_PLAN_PARITY_2026-06-01.md  CLAUDE_CODE_READONLY_DTYPE_AUDIT_PROMPT.md  CODEX_REBOOT_HANDOFF_2026-05-26.md  CONFIG_DRIVEN_KLEIN_PLAN_2026-05-31.md  CROSS_MODEL_SPEED_PLAN_2026-07-01.md  DTYPE_AUDIT_FINDINGS_2026-06-05.md  FULL_PORT_ROADMAP.md  FULL_PORT_TRAINING_PLAN.md  HANDOFF_2026-05-26_KLEIN9B_MULTISTEP_BLOCKED.md  HANDOFF_2026-05-26_MOJODIFFUSION_PORT.md  HANDOFF_2026-05-26_MOJO_PORT_CAMPAIGN.md  HANDOFF_2026-05-28_FRESH_CONTEXT_IMAGE_PORT.md  HANDOFF_2026-05-28_SESSION_MULTIMODEL.md  HANDOFF_2026-05-30_MOJO_TRAINING_PORT_MASTER.md  HANDOFF_2026-05-30_PERF_ROADMAP.md  HANDOFF_2026-05-30_TRAINING_PORT_INTEGRATION.md  HANDOFF_2026-05-30_TRAINING_PORT_T0_SDPA_BWD.md  HANDOFF_2026-05-30_TRAINING_PORT_T1T4_COMPLETE.md  HANDOFF_2026-05-31_KLEIN_FINALMOD_FIX_AND_CONFIG_REFACTOR.md  HANDOFF_2026-05-31_PERF_A1_A2_COMPLETE.md  HANDOFF_2026-05-31_PERF_DX_LEVER_AND_D2H_ATTRIBUTION.md  HANDOFF_2026-06-01_RUNNABLE_MOJO_TRAINERS_5MODELS.md  HANDOFF_2026-06-01_SDXL_ERNIE_ANIMA_TRAINING_PORT.md  KLEIN_TRAINER_PROJECT_RULES_2026-05-31.md  MOJO_TRAINER_USE_STATUS.md  NEXT_SESSION_STATE_2026-05-31.md  (+51 more)
serenity-server/: Cargo.toml  README.md
serenity-server/canvas/: .gitignore  CONTRACT.md  index.html
serenity-server/canvas/css/: styles.css
serenity-server/canvas/js/: api.js  main.js  state.js
serenity-server/crates/graph/: Cargo.toml
serenity-server/crates/ipc/: Cargo.toml
serenity-server/crates/server/: Cargo.toml
serenity-server/crates/wire/: Cargo.toml
serenity-server/scripts/: magic_prompt.sh
serenity-server/tests/: e2e_cancel.sh  e2e_stub.sh  e2e_workflow.sh
serenity-server/tests/refs/: comfy_canvas__min_t2i.lowered.json  comfy_canvas__min_t2i.request.json  ideogram4__basic_txt2img_v3.lowered.json  ideogram4__basic_txt2img_v3.request.json  ideogram4__basic_txt2img_v4.lowered.json  ideogram4__basic_txt2img_v4.request.json  serenityflow__flux1_dev_edit.lowered.json  serenityflow__flux1_dev_edit.request.json  serenityflow__flux1_dev_edit_lora.lowered.json  serenityflow__flux1_dev_edit_lora.request.json  serenityflow__flux1_dev_t2i.lowered.json  (+40 more)
(+2193 files in other folders)
