# Serenity Rust control plane — workspace.
# Replaces the pure-Mojo daemon's control plane (HTTP/WS/JSON/jobs/graph/dispatch)
# while driving the UNCHANGED Mojo inference workers over the existing AF_UNIX
# newline-JSON IPC. See serenitymojo/docs/SERENITY_RUST_CONTROL_PLANE_PLAN_2026-06-13.md
[workspace]
resolver = "2"
members = ["crates/wire", "crates/ipc", "crates/graph", "crates/server"]

[workspace.package]
edition = "2021"
version = "0.0.1"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "socket", "process", "signal"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# PNG decode/encode + lanczos resize for /v1/gallery thumbnails (png only — lean).
image = { version = "0.25", default-features = false, features = ["png"] }
# internal
serenity-wire = { path = "crates/wire" }
serenity-ipc = { path = "crates/ipc" }
serenity-graph = { path = "crates/graph" }
